# Atlas

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docker.yml  release.yml
Finality labs/finality_landing/: package-lock.json
config/: local.toml  production.toml
crates/gateway/: Cargo.toml
crates/gateway/src/: auth.rs  clients.rs  context.rs  dto.rs  error.rs  handlers.rs  jwks_fetcher.rs  main.rs  middleware.rs  openapi.rs  rbac.rs  router.rs  state.rs
crates/identity/: Cargo.toml
crates/identity/src/: lib.rs  main.rs
crates/identity/src/adapters/: mod.rs
crates/identity/src/adapters/inbound/: grpc.rs  mod.rs
crates/identity/src/adapters/outbound/: memory.rs  mod.rs  oauth.rs  postgres.rs
crates/identity/src/application/: error.rs  handlers.rs  jwt.rs  mod.rs  ports.rs
crates/identity/src/domain/: credential.rs  error.rs  mod.rs  oauth.rs  role.rs  token.rs  user.rs
crates/identity/tests/: handlers.rs
crates/ledger/: Cargo.toml
crates/ledger/benches/: replay.rs
crates/ledger/src/: lib.rs  main.rs
crates/ledger/src/adapters/: mod.rs
crates/ledger/src/adapters/inbound/: grpc.rs  mod.rs
crates/ledger/src/adapters/outbound/: memory.rs  mod.rs  postgres.rs
crates/ledger/src/application/: commands.rs  mod.rs  ports.rs  queries.rs  saga.rs
crates/ledger/src/domain/: account.rs  error.rs  events.rs  mod.rs  transfer.rs
crates/ledger/tests/: conservation_prop.rs  transfer_e2e.rs
crates/libs/config/: Cargo.toml
crates/libs/config/src/: lib.rs
crates/libs/infra/: Cargo.toml
crates/libs/infra/src/: db.rs  error.rs  health.rs  lib.rs  lock.rs  outbox.rs  rate_limit.rs  redis_pool.rs
crates/libs/infra/src/bus/: kafka.rs  mod.rs
crates/libs/kernel/: Cargo.toml
crates/libs/kernel/src/: correlation.rs  currency.rs  error.rs  ids.rs  lib.rs  money.rs  time.rs
crates/libs/proto/: Cargo.toml  build.rs
crates/libs/proto/proto/: identity.proto  ledger.proto
crates/libs/proto/src/: lib.rs
crates/libs/resilience/: Cargo.toml
crates/libs/resilience/src/: backoff.rs  circuit_breaker.rs  lib.rs  retry.rs
crates/libs/telemetry/: Cargo.toml
crates/libs/telemetry/src/: lib.rs
crates/notification/: Cargo.toml
crates/notification/src/: auth.rs  consumer.rs  hub.rs  main.rs  message.rs  presence.rs  pubsub.rs
crates/notification/src/adapters/: mod.rs  ws.rs
crates/worker/: Cargo.toml
crates/worker/src/: audit.rs  dlq.rs  main.rs  provisioning.rs  scheduler.rs  store.rs
deploy/: README.md  docker-compose.yml
deploy/docker/: .dockerignore  Dockerfile
deploy/k8s/base/: README.md  configmap.yaml  gateway.yaml  identity.yaml  ingress.yaml  kustomization.yaml  ledger.yaml  migrate-job.yaml  namespace.yaml  networkpolicy.yaml  notification.yaml  secret.example.yaml  worker.yaml
deploy/k8s/overlays/production/: kustomization.yaml
deploy/observability/: otel-collector.yaml  prometheus.yml
deploy/observability/grafana/dashboards/: ledger-overview.json
deploy/observability/grafana/provisioning/dashboards/: dashboards.yml
deploy/observability/grafana/provisioning/datasources/: datasources.yml
deploy/postgres/: init-databases.sql
docs/: ARCHITECTURE.md  CONVENTIONS.md  DOMAIN.md  PRODUCTION_SETUP.md  ROADMAP.md
docs/adr/: 0001-modular-monorepo.md  0002-hexagonal-architecture.md  0003-event-sourcing-scope.md  0004-cqrs.md  0005-transfer-saga.md  0006-transactional-outbox.md  0007-redpanda.md  0008-database-per-context.md  0009-auth-strategy.md  0010-money-representation.md  0011-grpc-internal-rest-edge.md  0012-observability-otel.md  README.md
migrations/identity/: 0001_init.sql
migrations/ledger/: 0001_init.sql
migrations/worker/: 0001_init.sql
tests/load/: README.md  smoke.js  stress.js  transfers.js
