[package]
name = "identity"
description = "Identity & Access service: registration, JWT/refresh, OAuth2, RBAC (gRPC + outbox)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "identity"
path = "src/main.rs"

[dependencies]
kernel = { workspace = true }
config = { workspace = true }
telemetry = { workspace = true, features = ["otel"] }
infra = { workspace = true }
proto = { workspace = true }
resilience = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
validator = { workspace = true }
# In-memory RSA keypair generation for the RS256 signing key (ADR-0009). Pure-Rust, so the
# tree still builds without a C toolchain. Only `identity` mints keys; verifiers use JWKS.
rsa = "0.9"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
