[package]
name = "ledger"
description = "Event-sourced double-entry ledger service (gRPC, ES + CQRS)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "ledger"
path = "src/main.rs"

[dependencies]
kernel = { workspace = true }
config = { workspace = true }
telemetry = { workspace = true, features = ["otel"] }
infra = { workspace = true }
proto = { workspace = true }
resilience = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "replay"
harness = false
