[package]
name = "app-infra"
description = "Outbound infrastructure adapters: Postgres, Redis (locks/limits), event bus, outbox, health."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "infra"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
kernel = { workspace = true }
config = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
rskafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
metrics = { workspace = true }
