[package]
name = "app-resilience"
description = "Reusable resilience primitives: circuit breaker, retry, exponential backoff."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "resilience"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
kernel = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util", "time"] }
